@@ -69,6 +69,9 @@ version 0.60:
 	* Word-wrapping on mail notification text (Thanks, Andrew Molloy)
 	* Strip trailing and leading spaces from MSN/Yahoo names (Thanks,
 	  Arun Tharuvai)
+	*/topic when not an op now displays the current topic(thanks Mark 
+	 Doliner)
+	*i18n fixes (thanks Matt Wilson)
 
 version 0.59 (06/24/2002):
 	* Hungarian translation added (Thanks, Sutto Zoltan)
